# ollama-exec-shim

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test_script.sh
.github/workflows/: ci.yml
src/ollama_exec_shim/: cli.py
tests/: test_cli.py
